<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="title_map">Map View</string>
    <string name="title_list">List View</string>
    <string name="title_workmate">Workmate</string>

    <string name="menu_lunch">YOUR LUNCH</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="toolbar_search_title">Search restaurants</string>
    <string name="toolbar_search_hint">Search</string>


    <string name="restaurant_name">Name Of The Restaurant</string>
    <string name="restaurant_address">address of the restaurant</string>
    <string name="call_option">CALL</string>
    <string name="like_option">LIKE</string>
    <string name="unlike_option">UNLIKE</string>
    <string name="website_option">WEBSITE</string>
    <string name="friend_restaurant">Scarlett is joining</string>

    <string name="activity_main_menu_search">search</string>

    <!-- WORKMATES LIST -->
    <string name="mates_is_eating_at">%1$s is eating at %2$s</string>
    <string name="mates_hasnt_decided">%1$s hasn\'t decided yet</string>

    <!-- RESTAURANT LIST -->
    <string name="restaurant_closed">Closed</string>
    <string name="restaurant_opening_not_know">Opening hours are not known</string>
    <string name="list_unit_distance">%1$sm</string>
    <string name="restaurant_open_until">Open until %1$s</string>
    <string name="restaurant_closing_soon">Closing soon (%1$s)</string>
    <string name="restaurant_mates_number" translatable="false">(%1$d)</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">222821079119135</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb222821079119135</string>

    <!-- TWITTER PURPOSE -->
    <string name="twitter_consumer_key" translatable="false">ca76cEU94Xa55wPv6kmV4WjiE</string>
    <string name="twitter_consumer_secret" translatable="false">9utVaLSw9e5VDB5344NUglFKnEx5SPERNbNY8hImJy2bSgwGk8</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_activity_description">Find a nice restaurant and invite your co-workers for lunch</string>

    <string name="login">Connexion</string>
    <string name="chat_with_mentor">Discute avec un mentor</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- ERROR TEXT -->
    <string name="http_error_message" translatable="false">HttpException, Error code : %1$i</string>
    <string name="timeout_error_message" translatable="false">Request timeout, please check your internet connection</string>
    <string name="exception_error_message" translatable="false">An error occurred, please check your internet connection</string>
    <string name="generic_error_message" translatable="false">An error occurred, please try again</string>
    <string name="no_restaurant_error_message" translatable="false">No restaurants found, try to change your search radius settings</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="title_activity_map_fragment">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="popup_title_perm_access">This application need permissions to work correctly.</string>
    <string name="search_too_short">Your query must be 3 character length minimum</string>
    <string name="restaurant_detail_recyclerview">%1$s is joining!</string>
    <string name="restaurant_detail_no_phone">No phone number available</string>
    <string name="restaurant_detail_no_website">No website available</string>
    <string name="restaurant_error_retrieving_info">Unable to retrieve some user information</string>
    <string name="restaurant_new_booking">You have booked a new restaurant for today!</string>
    <string name="restaurant_change_booking">You have change your booked restaurant for today!</string>
    <string name="restaurant_cancel_booking">You canceled your reservation for this restaurant!</string>
    <string name="restaurant_like_ok">You liked this restaurant!</string>
    <string name="restaurant_like_ko">Error, please try again later</string>
    <string name="restaurant_dislike_ok">You dislike this restaurant!</string>
    <string name="drawer_no_restaurant_booked">You don\\\'t booked any restaurant for today!</string>
    <string name="notification_message_no_workmates">None</string>
    <string name="notification_message_big">Here is a reminder of your choice for today : %1$s %2$s. Workmates participating : %3$s</string>
    <string name="notification_message">Here is a reminder of your choice for today</string>
    <string name="settings_save_text">Save</string>
    <string name="settings_notification_title">Notifications</string>
    <string name="settings_save_ok">Settings saved!</string>
    <string name="no_return">Cant return</string>
</resources>
