<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">
<item>
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_lunch"
                android:icon="@drawable/ic_menu_restaurant_menu_black_24dp"
                android:title="@string/menu_lunch" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_power_settings_new_black_24dp"
                android:title="@string/menu_logout" />
        </group>
    </menu>
</item>

</menu>